<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Spacer to push content down -->
        <View
            android:id="@+id/spacerTop"
            android:layout_width="0dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Amount input (supports decimals) -->
        <EditText
            android:id="@+id/etAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_amount"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@id/spacerTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Currency Spinner -->
        <Spinner
            android:id="@+id/spCurrency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/etAmount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Category Spinner -->
        <Spinner
            android:id="@+id/spCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/spCurrency"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Remark input -->
        <EditText
            android:id="@+id/etRemark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_remark"
            app:layout_constraintTop_toBottomOf="@id/spCategory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Date input with DatePicker -->
        <EditText
            android:id="@+id/etDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:focusable="false"
            android:hint="@string/hint_created_date"
            app:layout_constraintTop_toBottomOf="@id/etRemark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Add Expense button -->
        <Button
            android:id="@+id/btnAddExpense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/btn_add_expenses"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
